# ais-mongo-example

./: .env.dist  Cargo.toml  Dockerfile  README.md  compose.yml
src/: config.rs  main.rs  messages.rs
src/messages/: datetime.rs  meta_data.rs  position_report.rs  trim_string.rs
